rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_tests__bitwise_constant_folding.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
assertion_line: 40
expression: output
---
## Unoptimized Output

j main
main:
move r8 0
move r9 15
move r10 4111

## Optimized Output

move r8 0
move r9 15
move r10 4111
