rust_compiler/libs/integration_tests/src/snapshots/integration_tests__bitwise_tests__bitwise_tests__bitwise_operations.snap
---
source: libs/integration_tests/src/bitwise_tests.rs
assertion_line: 17
expression: output
---
## Unoptimized Output

j main
main:
move r8 5
move r9 3
and r1 r8 r9
move r10 r1
or r2 r8 r9
move r11 r2
xor r3 r8 r9
move r12 r3
not r4 r8
move r13 r4

## Optimized Output

move r8 5
move r9 3
and r10 r8 r9
or r11 r8 r9
xor r12 r8 r9
not r4 r8
move r13 r4
